Fix page overflow because of magnifying glass

--- a/src/styles/layout/_containers.scss
+++ b/src/styles/layout/_containers.scss
@@ -5,6 +5,7 @@ body,
 }
 
 body {
+	overflow-x: hidden;
 	background: $color-background;
 }
 
